--- a/Company assignment/about.html
+++ b/Company assignment/about.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Web Page</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -20,6 +21,9 @@
                 <div><a id="home1" href="./home.html">Home</a></div>
                 <div><a id="about1" href="./about.html">About us</a></div>
                 <div><a id="contact" href="./contact.html">Contact us</a></div>
+                <div id="search_icon">
+                    <i class="fa fa-search" style="font-size:24px"></i>
+                </div>
             </div>
         </div>
         <br><br>
