--- a/Company assignment/home.html
+++ b/Company assignment/home.html
@@ -5,55 +5,42 @@
     <meta charset="UTF-8">
     <title>Web Page</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <div id="main_container">
-        <h1 id="heading">Faecom Engineering</h1>
-        <br>
-        <h3 id="sub_heading">Designing of CFS based Construction</h3>
-        <br>
-    </div>
-    <div id="second_container">
         <div id="nav_bar">
+            <img src="./logo.jpg" id="logo">
             <div id="nav">
                 <div><a id="home" href="./home.html">Home</a></div>
                 <div><a id="about" href="./about.html">About us</a></div>
                 <div><a id="contact" href="./contact.html">Contact us</a></div>
-            </div>
-        </div>
-        <br>
-        <div id="images">
-            <img src="./image2.jpg" class="image2">
-            <img src="./image3.png" class="image2">
-            <img src="./image4.jpg" class="image2">
-        </div>
-        <br>
-        <div id="info">
-            <div id="highlights">
-                <h2 id="sub_headind1">SOME HIGHLIGHTS OF OUR WORK</h2>
-                <div id="highlight">
-                    <ul id="list_heading">We have designed,
-                        <li class="list">Aldergrove Care Center of four floors using CFS design</li>
-                        <li class="list">Also, Tamarack heights buliding of five floor using CFS design</li>
-                        <li class="list">Curri Burrack Home of two floor having CFS trusses at the roof</li>
-                    </ul>
-                </div>
-            </div>
-            <div id="highlights">
-                <h2 id="sub_headind1">PROVIDE SERVICES</h2>
-                <div id="highlight">
-                    <ul id="list_heading">We provide services such as,
-                        <li class="list">Cold Form Steel Structure</li>
-                        <li class="list">Some Architectural designs</li>
-                        <li class="list">Normal Construction</li>
-                        <li class="list">project management services</li>
-                        <li class="list">building trades and related engineering works</li>
-                    </ul>
+                <div id="search_icon">
+                    <i class="fa fa-search" style="font-size:24px"></i>
                 </div>
             </div>
         </div>
-        <br><br>
+        <br>
+        <div id="photo_design">
+            <img src="./image2.jpg" id="image2">
+            <h1 id="photo_text">WE BUILD SOMETHING NEW AND CONSISTENT</h1>
+        </div>
+        
+        <div id="highlights">
+            <img src="./photo.JPG"id="photo">
+            <div id="highlights_text">
+                <h4 id="highlight_heading1">WHO WE ARE</h4>
+                <h1 id="highlight_heading2">Highlights</h1>
+                <p class="highlight_text">Prospecta BuildX is one of the fastest growing & top civil & infrastructure construction company in India & It has established its prowess across multiple lines of business. </p>
+                <br>
+                <p class="highlight_text">We have a proven record of accomplishment and are a reputable Engineering and Construction Company in India.</p>
+                <br>
+                <p class="highlight_text">We commit ourselves As a Leading Engineering and Construction Company to complete all projects within the timeline set with our clients.</p>
+            </div>
+        </div>
+        <br>
+        
         <div id="home_image">
             <img id="image1" src="./image1.jpg">
         </div>
