--- a/Company assignment/contact.html
+++ b/Company assignment/contact.html
@@ -10,13 +10,8 @@
 
 <body>
     <div id="main_container">
-        <h1 id="heading">Faecom Engineering</h1>
-        <br>
-        <h3 id="sub_heading">Designing of CFS based Construction</h3>
-        <br>
-    </div>
-    <div id="second_container">
         <div id="nav_bar">
+            <img src="./logo.jpg" id="logo">
             <div id="nav">
                 <div><a id="home1" href="./home.html">Home</a></div>
                 <div><a id="about" href="./about.html">About us</a></div>
@@ -26,8 +21,8 @@
                 </div>
             </div>
         </div>
-        <br><br>
-        <h2 id="heading3">Register your name</h2>
+        
+        <h2 id="heading3">Get in Touch</h2>
         <div id="contact_form">
             <form id="form" action="./error-mesg.html">
                 <label id="name">Name :- </label>
@@ -45,7 +40,12 @@
                 </div>
             </form>
         </div>
+        <br><br><br>
+        <footer id="footer">
+            <p id="footer_text">© 2018 Homebuild Engineering solutions. </p>
+        </footer>
     </div>
+    
 </body>
 
 </html>
