--- a/Company assignment/home.html
+++ b/Company assignment/home.html
@@ -26,27 +26,67 @@
             <img src="./image2.jpg" id="image2">
             <h1 id="photo_text">WE BUILD SOMETHING NEW AND CONSISTENT</h1>
         </div>
-        
+
         <div id="highlights">
-            <img src="./photo.JPG"id="photo">
+            <img src="./photo.JPG" id="photo">
             <div id="highlights_text">
                 <h4 id="highlight_heading1">WHO WE ARE</h4>
                 <h1 id="highlight_heading2">Highlights</h1>
-                <p class="highlight_text">Prospecta BuildX is one of the fastest growing & top civil & infrastructure construction company in India & It has established its prowess across multiple lines of business. </p>
+                <p class="highlight_text">Prospecta BuildX is one of the fastest growing & top civil & infrastructure
+                    construction company in India & It has established its prowess across multiple lines of business.
+                </p>
                 <br>
-                <p class="highlight_text">We have a proven record of accomplishment and are a reputable Engineering and Construction Company in India.</p>
+                <p class="highlight_text">We have a proven record of accomplishment and are a reputable Engineering and
+                    Construction Company in India.</p>
                 <br>
-                <p class="highlight_text">We commit ourselves As a Leading Engineering and Construction Company to complete all projects within the timeline set with our clients.</p>
+                <p class="highlight_text">We commit ourselves As a Leading Engineering and Construction Company to
+                    complete all projects within the timeline set with our clients.</p>
             </div>
         </div>
         <br>
-        
-        <div id="home_image">
-            <img id="image1" src="./image1.jpg">
+
+        <div id="services">
+            <h4 id="services_heading1">WHAT WE DO</h4>
+            <h1 id="main_heading">OUR SERVICES</h1>
+            <div id="our_services">
+                <div id="serices_cards">
+                    <div class="services_card1">
+                        <img src="./icon1.jpg" class="icon1">
+                        <div class="services_text">
+                            <span class="services_heading">Design & Consultancy</span>
+                        </div>
+                    </div>
+                    <div class="services_card1">
+                        <img src="./icon2.jpg" class="icon1">
+                        <div class="services_text">
+                            <span class="services_heading">Design & Build EPC contract</span>
+                        </div>
+                    </div>
+                    <div class="services_card1">
+                        <img src="./icon3.jpg" class="icon1">
+                        <div class="services_text">
+                            <span class="services_heading">Industrial Warehouse Construction</span>
+                        </div>
+                    </div>
+                    <div class="services_card1">
+                        <img src="./icon4.jpg" class="icon1">
+                        <div class="services_text">
+                            <span class="services_heading">Land Granding and Development</span>
+                        </div>
+                    </div>
+                    <div class="services_card1">
+                        <img src="./icon5.jpg" class="icon1">
+                        <div class="services_text">
+                            <span class="services_heading">Residential Bulidings & Construction</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
-        <footer>
-            <p>© Faecom Engineering solutions 2018</p>
+        <footer id="footer">
+            <p id="footer_text">© 2018 Homebuild Engineering solutions. </p>
         </footer>
     </div>
 </body>
