--- a/Company assignment/about.html
+++ b/Company assignment/about.html
@@ -10,13 +10,8 @@
 
 <body>
     <div id="main_container">
-        <h1 id="heading">Faecom Engineering</h1>
-        <br>
-        <h3 id="sub_heading">Designing of CFS based Construction</h3>
-        <br>
-    </div>
-    <div id="second_container">
         <div id="nav_bar">
+            <img src="./logo.jpg" id="logo">
             <div id="nav">
                 <div><a id="home1" href="./home.html">Home</a></div>
                 <div><a id="about1" href="./about.html">About us</a></div>
@@ -26,50 +21,60 @@
                 </div>
             </div>
         </div>
-        <br><br>
-        <h2 id="sub_headind1">ABOUT COMPANY</h2>
-        <pre id="para">                   Faecom Engineering began as a modeling and designing of CFS structure.Over theyears, the company has 
+        <div id="about_section">
+            <div id="about_para">
+                <h2 id="sub_headind1">ABOUT US</h2>
+                <pre
+                    id="para">  Homebuild Engineering solutions began as a modeling and designing of CFS structure.Over theyears, the company has 
 undertaken many challenging projects and accumulated skills, know-how and experiences in design and build solutions, project 
-management services, building trades and related engineering works.Today, Faecom engineering takes on the role of main 
-contractor for small to medium size projects and performs project management services to coordinates specialist trades for 
+management services, building trades and related engineering works.Today, Homebuild Engineering solutions takes on the role of 
+main contractor for small to medium size projects and performs project management services to coordinates specialist trades for 
 industrial/commercial projects. We also provide design inputs and engineering solutions as value-add services to our clients.</pre>
+            </div>
+
+        </div>
+
         <br>
         <br>
-        <h3 id="sub_heading3">Our team,</h3>
-        <div id="cards">
-            <div class="card1">
-                <img class="photo" src="./profile.png">
-                <div class="profile">
-                    <div class="name">Name: <span>Xyz</span></div>
-                    <div class="designation">Designation: <span>CFS modeler</span></div>
-                    <div class="designation">Experience: <span>5 years</span></div>
+        <div id="team">
+            <h2 id="sub_heading3">Team Members</h2>
+            <br>
+            <div id="cards">
+                <div class="card1">
+                    <img class="photo" src="./profile.png">
+                    <div class="profile">
+                        <div class="name">Name: <span>Xyz</span></div>
+                        <div class="designation">Designation: <span>CFS modeler</span></div>
+                        <div class="designation">Experience: <span>5 years</span></div>
+                    </div>
                 </div>
-            </div>
-            <div class="card1">
-                <img class="photo" src="./profile.png">
-                <div class="profile">
-                    <div class="name">Name: <span>Xyz</span></div>
-                    <div class="designation">Designation: <span>CFS modeler</span></div>
-                    <div class="designation">Experience: <span>5 years</span></div>
+                <div class="card1">
+                    <img class="photo" src="./profile.png">
+                    <div class="profile">
+                        <div class="name">Name: <span>Xyz</span></div>
+                        <div class="designation">Designation: <span>CFS modeler</span></div>
+                        <div class="designation">Experience: <span>5 years</span></div>
+                    </div>
                 </div>
-            </div>
-            <div class="card1">
-                <img class="photo" src="./profile.png">
-                <div class="profile">
-                    <div class="name">Name: <span>Xyz</span></div>
-                    <div class="designation">Designation: <span>CFS modeler</span></div>
-                    <div class="designation">Experience: <span>5 years</span></div>
+                <div class="card1">
+                    <img class="photo" src="./profile.png">
+                    <div class="profile">
+                        <div class="name">Name: <span>Xyz</span></div>
+                        <div class="designation">Designation: <span>CFS modeler</span></div>
+                        <div class="designation">Experience: <span>5 years</span></div>
+                    </div>
                 </div>
-            </div>
-            <div class="card1">
-                <img class="photo" src="./profile.png">
-                <div class="profile">
-                    <div class="name">Name: <span>Xyz</span></div>
-                    <div class="designation">Designation: <span>CFS modeler</span></div>
-                    <div class="designation">Experience: <span>5 years</span></div>
+                <div class="card1">
+                    <img class="photo" src="./profile.png">
+                    <div class="profile">
+                        <div class="name">Name: <span>Xyz</span></div>
+                        <div class="designation">Designation: <span>CFS modeler</span></div>
+                        <div class="designation">Experience: <span>5 years</span></div>
+                    </div>
                 </div>
             </div>
         </div>
+
     </div>
 </body>
 
