--- a/Company assignment/error-mesg.html
+++ b/Company assignment/error-mesg.html
@@ -10,13 +10,8 @@
 
 <body>
     <div id="main_container">
-        <h1 id="heading">Faecom Engineering</h1>
-        <br>
-        <h3 id="sub_heading">Designing of CFS based Construction</h3>
-        <br>
-    </div>
-    <div id="second_container">
         <div id="nav_bar">
+            <img src="./logo.jpg" id="logo">
             <div id="nav">
                 <div><a id="home1" href="./home.html">Home</a></div>
                 <div><a id="about" href="./about.html">About us</a></div>
@@ -28,8 +23,14 @@
         </div>
         <br><br>
         <div id="contact_form1">
-            <h3>Response Submitted !</h3>
+            <h3>Response Submitted</h3>
+            <br>
+            <h1>Thank You!</h1>
         </div>
+        <br><br>
+        <footer id="footer">
+            <p id="footer_text">© 2018 Homebuild Engineering solutions. </p>
+        </footer>
     </div>
 </body>
 
