--- a/Company assignment/about.html
+++ b/Company assignment/about.html
@@ -59,8 +59,8 @@ industrial/commercial projects. We also provide design inputs and engineering so
                 <div class="card1">
                     <img class="photo1" src="./profile.png">
                     <div class="profile">
-                        <div class="name">Akshay Pote</div>
-                        <div class="designation">CFS modeler</div>
+                        <div class="name">Name: <span>Xyz</span></div>
+                        <div class="designation">Designation: <span>CFS modeler</span></div>
                         <div class="designation">Experience: <span>5 years</span></div>
                     </div>
                 </div>
