--- a/Company assignment/about.html
+++ b/Company assignment/about.html
@@ -41,7 +41,7 @@ industrial/commercial projects. We also provide design inputs and engineering so
             <br>
             <div id="cards">
                 <div class="card1">
-                    <img class="photo1" src="./profile.png">
+                    <img class="photo1" src="./profile.jpeg">
                     <div class="profile">
                         <div class="name">Name: <span>Xyz</span></div>
                         <div class="designation">Designation: <span>CFS modeler</span></div>
@@ -49,7 +49,7 @@ industrial/commercial projects. We also provide design inputs and engineering so
                     </div>
                 </div>
                 <div class="card1">
-                    <img class="photo1" src="./profile.png">
+                    <img class="photo1" src="./profile.jpeg">
                     <div class="profile">
                         <div class="name">Name: <span>Xyz</span></div>
                         <div class="designation">Designation: <span>CFS modeler</span></div>
@@ -57,7 +57,7 @@ industrial/commercial projects. We also provide design inputs and engineering so
                     </div>
                 </div>
                 <div class="card1">
-                    <img class="photo1" src="./profile.png">
+                    <img class="photo1" src="./profile.jpeg">
                     <div class="profile">
                         <div class="name">Name: <span>Xyz</span></div>
                         <div class="designation">Designation: <span>CFS modeler</span></div>
@@ -65,7 +65,7 @@ industrial/commercial projects. We also provide design inputs and engineering so
                     </div>
                 </div>
                 <div class="card1">
-                    <img class="photo1" src="./profile.png">
+                    <img class="photo1" src="./profile.jpeg">
                     <div class="profile">
                         <div class="name">Name: <span>Xyz</span></div>
                         <div class="designation">Designation: <span>CFS modeler</span></div>
